# palautusrepositorio

./: README.md
viikko1/nhl-statistics/src/: index.py  statistics_service.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/git-branch-harjoitus/: index.py  tulo.py
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/hello-robot/: log.html  output.xml  pyproject.toml  report.html
viikko3/login/: log.html  output.xml  report.html
viikko3/login/src/services/: user_service.py
viikko3/login/src/tests/: login.robot  register.robot  resource.robot
viikko4/: muutoksia.txt
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/tests/: kauppa_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko6/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
